--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="margin-left: 40px; margin-bottom: 100px; margin-top: 40px;">
 
     <header>
-        <a href="index.html">
+        <a href="index.html">    
             <img src="./img/banner.jpg" width="300" height="150" alt="A lot of macaroons"> 
         </a>      
     </header>
@@ -23,7 +23,7 @@
             <h1>Macaroons</h1>
 
             <section>
-                <h2>INGREDIENTS</h2>
+                <h2>INGREDIENTS bbb</h2>
 
                 <table  class="table">
                 
